--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 	<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 	<link rel="shortcut icon" href="favicon.ico">
 	<title>ArsiIksait 博客 qwq</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
