--- a/cmd.html
+++ b/cmd.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
 <link rel="shortcut icon" href="image/favicon.ico">
-<meta charset="utf-8" />
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <title>CMD</title>
 <link href="css/cmd.css" rel="stylesheet" type="text/css">
 <script src="http://code.jquery.com/jquery-1.10.2.min.js">
@@ -12,7 +13,7 @@ $(document).ready(function(){
 	if(event.keyCode ==13){  
 	  $.ajax({
 		type: "POST",
-		url: "api/cmd.php",
+		url: "http://arsiiksait.github.io/blog/api/cmd.php",
 		data: "code="+$("#in").val(), 
 		success: function(msg){
 		  $("ul").append("<li>"+$("#in").val()+"</li>");  //将输入的输出到界面
