--- a/农场大亨/index.html
+++ b/农场大亨/index.html
@@ -15,27 +15,27 @@
 	<div>玉米: <text id="item-01-value">5</text>$*<text id="item-01-sell-num">0</text> (<text id="item-01-sell-total">0</text>$)<button id="item-01-lessen-sell-button" type="button">-</button><button id="item-01-add-sell-button" type="button">+</button><button id="item-01-sell-button" type="button">[出售]</button> <button id="item-01-auto-sell-button-on" type="button">[开启自动出售]</button> <button id="item-01-auto-sell-button-off" type="button">[关闭自动出售]</button></div>
 	</body>
 	<script name="initialization">
-		let money_num=50
-		let item_01_num=0
-		let item_02_num=0
-		let item_03_num=0
-		let item_01_value=5
+		var money_num=50
+		var item_01_num=0
+		var item_02_num=0
+		var item_03_num=0
+		var item_01_value=5
 		
-		let item_01_make=0
-		let item_02_make=0
-		let item_03_make=0
-		let item_03_use_01=0
-		let item_03_use_02=0
-		let item_01_sell_num=0
+		var item_01_make=0
+		var item_02_make=0
+		var item_03_make=0
+		var item_03_use_01=0
+		var item_03_use_02=0
+		var item_01_sell_num=0
 		
-		let item_01_lv=0
-		let item_02_lv=0
-		let item_03_lv=0
-		let item_01_sell_total=0
+		var item_01_lv=0
+		var item_02_lv=0
+		var item_03_lv=0
+		var item_01_sell_total=0
 		
-		let item_01_upgrade_spend=20
-		let item_02_upgrade_spend=20
-		let item_03_upgrade_spend=20
+		var item_01_upgrade_spend=20
+		var item_02_upgrade_spend=20
+		var item_03_upgrade_spend=20
 		var isAutoSellOn=false
 	</script>
 	<script name="button-behavior">
