--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 			<a href="assets/简单的批处理钢琴和嗡鸣器音乐.zip" id="batch_scripts" style="text-decoration:none;">简单的批处理钢琴和嗡鸣器音乐</a> 
 			<a href="assets/获取文件信息.bat" id="batch_scripts" style="text-decoration:none;">获取文件信息</a> 
 			<a href="assets/语音系统.zip" id="batch_scripts" style="text-decoration:none;">语音系统</a>
+			<a href="assets/文件与图片转换.zip" id="batch_scripts" style="text-decoration:none;">文件与图片转换</a>
 		</div>
 		</div>
 		<div class="text_RGB" id="AD_Indihome" style="right"><video id="IndihomeADVideo" src="video/Indihome.mp4" type="video/mp4"></video></div>
